optimization in signup, added sigin in auth,users and updated DBmodels

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "author": "yash masalge",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "env": "0.0.2",
