added google auth for signup and login and almost completed restaurant schema

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 mongodb_url= mongodb+srv://yashmasalge:Pain_1121@zomato-master.adysp.mongodb.net/zomato?retryWrites=true&w=majority
-
+GOOGLE_CLIENT_ID = 641780834321-94ts1caind8k9nski7ncsts90lqpbhls.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
