--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.2",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-simple-image-viewer": "0.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
