--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "leaflet": "^1.7.1",
@@ -16,10 +17,14 @@
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-simple-image-viewer": "0.0.3",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
